--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,23 @@
     "require": {
         "php": ">=5.3.2",
         "symfony/framework-bundle": "2.0.*",
+        "aws-sdk-for-php": "*",
         "kitpages/util-bundle": "*"
     },
+    "repositories": [
+        {
+            "type": "package",
+            "package": {
+                "name": "aws-sdk-for-php",
+                "version": "1.5.4",
+                "source": {
+                    "url": "https://github.com/amazonwebservices/aws-sdk-for-php.git",
+                    "type": "git",
+                    "reference": "1.5.4"
+                }
+            }
+        }
+    ],
     "autoload": {
         "psr-0": { "Kitpages\\FileSystemBundle": "" }
     },
