--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "php": ">=5.3.2",
         "symfony/framework-bundle": "2.0.*",
         "aws-sdk-for-php": "*",
-        "kitpages/util-bundle": "*"
+        "kitpages/util-bundle": ">=v1.0.0"
     },
     "repositories": [
         {
