--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require": {
         "php": ">=5.3.2",
         "symfony/framework-bundle": "2.0.*",
-        "aws-sdk-for-php": "*",
+        "amazonwebservices/aws-sdk-for-php": "*",
         "kitpages/util-bundle": ">=v1.0.0"
     },
     "repositories": [
