--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "symfony/framework-bundle": "2.0.*",
+        "symfony/framework-bundle": ">=2.0.*",
         "amazonwebservices/aws-sdk-for-php": "*",
         "kitpages/util-bundle": ">=v1.0.0"
     },
