--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,9 @@
         "php": ">=5.3.2",
         "symfony/framework-bundle": ">=2.1.*",
         "amazonwebservices/aws-sdk-for-php": "*",
+        "kitpages/util-bundle": "2.1.*"
+    },
+    "require-dev": {
         "kitpages/util-bundle": "master"
     },
     "autoload": {
