--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "symfony/framework-bundle": ">=2.1.*",
+        "symfony/framework-bundle": "2.1.*",
         "amazonwebservices/aws-sdk-for-php": "*",
         "kitpages/util-bundle": "2.1.*"
     },
