--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "php": ">=5.3.2",
         "symfony/framework-bundle": "2.1.*",
         "amazonwebservices/aws-sdk-for-php": "*",
-        "kitpages/util-bundle": "2.1.*"
+        "kitpages/util-bundle": "*"
     },
     "require-dev": {
         "kitpages/util-bundle": "master"
