--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,10 @@
     "require": {
         "php": ">=5.3.2",
         "symfony/framework-bundle": "2.1.*",
-        "amazonwebservices/aws-sdk-for-php": "*",
         "kitpages/util-bundle": "*"
     },
-    "require-dev": {
-        "kitpages/util-bundle": "master"
+    "suggest": {
+        "amazonwebservices/aws-sdk-for-php": "*"
     },
     "autoload": {
         "psr-0": { "Kitpages\\FileSystemBundle": "" }
