--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,17 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "symfony/framework-bundle": "*",
-        "kitpages/util-bundle": "*"
+        "symfony/framework-bundle": "~2.1",
+        "kitpages/util-bundle": "~3.0"
     },
     "require-dev": {
-        "kitpages/util-bundle": "dev-master"
+        "symfony/class-loader": "~2.1",
+        "symfony/yaml": "~2.1",
+        "symfony/finder": "~2.1",
+        "symfony/browser-kit": "~2.1"
     },
     "suggest": {
-        "amazonwebservices/aws-sdk-for-php": "*"
+        "amazonwebservices/aws-sdk-for-php": "~1.5"
     },
     "autoload": {
         "psr-0": { "Kitpages\\FileSystemBundle": "" }
