--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,14 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "symfony/framework-bundle": "~2.1",
+        "symfony/framework-bundle": "~2.1|~3.0",
         "kitpages/util-bundle": "~3.0"
     },
     "require-dev": {
-        "symfony/class-loader": "~2.1",
-        "symfony/yaml": "~2.1",
-        "symfony/finder": "~2.1",
-        "symfony/browser-kit": "~2.1"
+        "symfony/class-loader": "~2.1|~3.0",
+        "symfony/yaml": "~2.1|~3.0",
+        "symfony/finder": "~2.1|~3.0",
+        "symfony/browser-kit": "~2.1|~3.0"
     },
     "suggest": {
         "amazonwebservices/aws-sdk-for-php": "~1.5"
