--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,9 @@
         }
     ],
     "require": {
-        "php": ">=5.3.2",
-        "symfony/framework-bundle": "~2.1",
-        "kitpages/util-bundle": "~3.0"
+        "php": ">=5.6|>=7.0",
+        "symfony/framework-bundle": "~2.8|~3.0|~4.0",
+        "phpunit/phpunit":  "6.5.*"
     },
     "require-dev": {
         "symfony/class-loader": "~2.1",
