--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,12 @@
     ],
     "require": {
         "php": ">=5.6|>=7.0",
-        "symfony/framework-bundle": "~2.8|~3.0|~4.0",
-        "phpunit/phpunit":  "6.5.*"
+        "symfony/framework-bundle": "~2.8|~3.0|~4.0"
     },
     "require-dev": {
-        "symfony/class-loader": "~2.1",
-        "symfony/yaml": "~2.1",
-        "symfony/finder": "~2.1",
-        "symfony/browser-kit": "~2.1"
+        "phpunit/phpunit":  "6.5.*",
+        "symfony/yaml": "~2.8|~3.0|~4.0",
+        "symfony/browser-kit": "~2.8|~3.0|~4.0"
     },
     "suggest": {
         "amazonwebservices/aws-sdk-for-php": "~1.5"
